--- a/Solved/index.html
+++ b/Solved/index.html
@@ -138,7 +138,7 @@
             <img src="images/4.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Typography Company</h5>
-              <p class="card-text">Business Card</p>
+              <p class="card-text">Business Cards</p>
 
             </div>
           </div>
